build_err.txt
cargo : warning: 
unused import: 
`UpdateUserRequest`
At line:1 char:1
+ cargo build 2>&1 | 
Out-File -FilePath 
build_err.txt 
-Encoding UTF8; G ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (warning   
 : unused...ateUs    
erRequest`:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
 --> crates\auth-core
\src\services\identit
y.rs:2:46
  |
2 | ...t, 
UpdateUserRequest, 
U...
  |       
^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `TokenEngine`
 --> crates\auth-core
\src\services\identit
y.rs:3:53
  |
3 | ...r, 
TokenEngine};
  |       ^^^^^^^^^^^

warning: variants 
`EncodingError`, 
`KeyError`, and 
`ValidationError` 
are never constructed
  --> crates\auth-cor
e\src\services\token_
service.rs:69:5
   |
68 | enum JwtError {
   |      -------- 
variants in this enum
69 |     
EncodingError(Stri...
   |     
^^^^^^^^^^^^^
70 |     
KeyError(String),
   |     ^^^^^^^^
71 |     
TokenExpired,
72 |     
ValidationError,
   |     
^^^^^^^^^^^^^^^
   |
   = note: 
`JwtError` has a 
derived impl for the 
trait `Debug`, but 
this is 
intentionally 
ignored during dead 
code analysis
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: method `clea
nup_expired_tokens` 
is never used
   --> crates\auth-co
re\src\services\token
_service.rs:251:14
    |
218 | impl 
TokenEngine {
    | 
---------------- 
method in this 
implementation
...
251 |     async fn cl
eanup_expired_tokens(
&s...
    |              ^^
^^^^^^^^^^^^^^^^^^^^

warning: `auth-core` 
(lib) generated 4 
warnings (run `cargo 
fix --lib -p 
auth-core` to apply 
2 suggestions)
warning: unused 
import: `error`
 --> crates\auth-exte
nsion\src\plugin.rs:5
:21
  |
5 | ...o, error};
  |       ^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `error`
 --> crates\auth-exte
nsion\src\webhook.rs:
2:21
  |
2 | ...o, error};
  |       ^^^^^

warning: variable 
does not need to be 
mutable
  --> crates\auth-ext
ension\src\plugin.rs:
15:13
   |
15 | ...et mut 
engine = ...
   |       ----^^^^^^
   |       |
   |       help: 
remove this `mut`
   |
   = note: `#[warn(un
used_mut)]` (part of 
`#[warn(unused)]`) 
on by default

warning: unused 
variable: `client`
  --> crates\auth-pro
tocols\src\oauth.rs:4
2:13
   |
42 | ...et client = 
...
   |       ^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_client`
   |
   = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
variable: `params`
  --> crates\auth-pro
tocols\src\oauth.rs:4
3:13
   |
43 | ...et params = [
   |       ^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: `_params`

warning: field 
`token_url` is never 
read
 --> crates\auth-prot
ocols\src\oauth.rs:9:
5
  |
5 | pub struct 
OAuthService {
  |            
------------ field 
in this struct
...
9 |     token_url: 
String,
  |     ^^^^^^^^^
  |
  = note: 
`OAuthService` has a 
derived impl for the 
trait `Clone`, but 
this is 
intentionally 
ignored during dead 
code analysis
  = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `Row`
 --> crates\auth-db\s
rc\repositories\role_
repository.rs:5:25
  |
5 | ...ol, Row};
  |        ^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: 
`std::sync::Arc`
 --> crates\auth-db\s
rc\repositories\role_
repository.rs:6:5
  |
6 | use 
std::sync::Arc;
  |     
^^^^^^^^^^^^^^

warning: unused 
import: `Row`
 --> crates\auth-db\s
rc\repositories\sessi
on_repository.rs:5:25
  |
5 | ...ol, Row};
  |        ^^^

warning: unused 
import: 
`SubscriptionStatus`
 --> crates\auth-db\s
rc\repositories\subsc
ription_repository.rs
:3:59
  |
3 | ...n, 
SubscriptionStatus};
  |       
^^^^^^^^^^^^^^^^^^

warning: unused 
import: 
`UpdateUserRequest`
 --> crates\auth-db\s
rc\repositories\user_
repository.rs:2:62
  |
2 | ...t, 
UpdateUserRequest};
  |       
^^^^^^^^^^^^^^^^^

warning: unused 
import: `Result`
 --> crates\auth-db\s
rc\repositories\webau
thn_repository.rs:2:2
5
  |
2 | ...l, Result};
  |       ^^^^^^

warning: unused 
import: 
`std::sync::Arc`
 --> crates\auth-db\s
rc\sharding.rs:3:5
  |
3 | use 
std::sync::Arc;
  |     
^^^^^^^^^^^^^^

warning: field 
`validation_key` is 
never read
  --> crates\auth-db\
src\sharding.rs:23:5
   |
17 | pub struct 
ShardManager {
   |            
------------ field 
in this struct
...
23 |     
validation_key: 
String,
   |     
^^^^^^^^^^^^^^
   |
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: 
`auth-extension` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p 
auth-extension` to 
apply 3 suggestions)
warning: 
`auth-protocols` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p 
auth-protocols` to 
apply 2 suggestions)
warning: `auth-db` 
(lib) generated 8 
warnings (run `cargo 
fix --lib -p 
auth-db` to apply 7 
suggestions)
warning: unused 
import: 
`std::sync::Arc`
 --> crates\auth-cach
e\src\lib.rs:5:5
  |
5 | use 
std::sync::Arc;
  |     
^^^^^^^^^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of 
`#[warn(unused)]`) 
on by default

   Compiling 
auth-api v0.1.0 (C:\U
sers\Victo\Downloads\
sso\crates\auth-api)
warning: unused 
variable: `content`
  --> crates\auth-aud
it\src\service.rs:61:
13
   |
61 | ...et content = 
...
   |       ^^^^^^^ 
help: if this is 
intentional, prefix 
it with an 
underscore: 
`_content`
   |
   = note: `#[warn(un
used_variables)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: 
`auth-cache` (lib) 
generated 1 warning 
(run `cargo fix 
--lib -p auth-cache` 
to apply 1 
suggestion)
warning: 
`auth-audit` (lib) 
generated 1 warning 
(run `cargo fix 
--lib -p auth-audit` 
to apply 1 
suggestion)
warning: unused 
imports: `role_reposi
tory::RoleRepository`
, `session_repository
::SessionRepository`,
 and `subscription_re
pository::Subscriptio
nRepository`
  --> crates\auth-api
\src\lib.rs:10:5
   |
10 |     role_reposit
ory::RoleRepository,
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^
11 |     session_repo
sitory::SessionReposi
tory,
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^
12 |     subscription
_repository::Subscrip
tionRepository,
   |     ^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^
   |
   = note: `#[warn(un
used_imports)]` 
(part of 
`#[warn(unused)]`) 
on by default

warning: unused 
import: `State`
 --> crates\auth-api\
src\handlers\auth_oid
c.rs:2:22
  |
2 |     
extract::{Query, 
State},
  |                  
    ^^^^^

warning: unused 
import: 
`tokio::sync::RwLock`
  --> crates\auth-api
\src\middleware\rate_
limit.rs:13:5
   |
13 | use 
tokio::sync::RwLock;
   |     
^^^^^^^^^^^^^^^^^^^

error[E0107]: struct 
takes 0 generic 
arguments but 1 
generic argument was 
supplied
   --> crates\auth-ap
i\src\middleware\rate
_limit.rs:66:11
    |
 66 |     next: 
Next<B>,
    |           
^^^^--- help: remove 
the unnecessary 
generics
    |           |
    |           
expected 0 generic 
arguments
    |
note: struct defined 
here, with 0 generic 
parameters
   --> C:\Users\Victo
\.cargo\registry\src\
index.crates.io-1949c
f8c6b5b557f\axum-0.7.
9\src\middleware\from
_fn.rs:335:12
    |
335 | pub struct 
Next {
    |            ^^^^

error[E0308]: 
mismatched types
   --> crates\auth-ap
i\src\middleware\rate
_limit.rs:83:14
    |
 63 | pub async fn ra
te_limit_middleware<B
>(
    |                
                    
- found this type 
parameter
...
 83 |     
next.run(req).await
    |          --- 
^^^ expected 
`Request<Body>`, 
found `Request<B>`
    |          |
    |          
arguments to this 
method are incorrect
    |
    = note: expected 
struct `axum::http::R
equest<Body>`
               found 
struct `axum::http::R
equest<B>`
note: method defined 
here
   --> C:\Users\Victo
\.cargo\registry\src\
index.crates.io-1949c
f8c6b5b557f\axum-0.7.
9\src\middleware\from
_fn.rs:341:18
    |
341 |     pub async 
fn run(mut self, 
req: Request) -> 
Response {
    |                
  ^^^

Some errors have 
detailed 
explanations: E0107, 
E0308.
For more information 
about an error, try 
`rustc --explain 
E0107`.
warning: `auth-api` 
(lib) generated 3 
warnings
error: could not 
compile `auth-api` 
(lib) due to 2 
previous errors; 3 
warnings emitted
